# serde_derive_rescript

./: Cargo.toml  README.md  mods.patch
src/: de.rs  lib.rs  rescript.rs  ser.rs
src/de/: enum_.rs  enum_mixed.rs
src/internals/: attr.rs
tests/: enum.rs  struct.rs
